# jjk

./: .vercelignore  README.md  REFACTORING.md  app.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
data/: __init__.py  abilities.py  arcs.py  base.py  characters_py.py  locations.py  techniques.py
scripts/: download_character_portraits.py
static/css/: components.css  style.css
static/js/: main.js
templates/: 404.html  arc.html  arcs.html  base.html  character.html  characters.html  cursed_spirit.html  cursed_spirits.html  index.html  location.html  locations.html  philosophy.html  technique.html  techniques.html
templates/partials/: card.html  filter-bar.html  grid.html  hero.html  nav.html
utils/: __init__.py  routes.py
