[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jjk"
version = "0.1.0"
description = "A Jujutsu Kaisen web application"
requires-python = ">=3.9"
dependencies = [
    "Flask",
    "Pillow>=10.0",
    "cloudscraper>=1.2.71",
    "gunicorn",
]
